--- a/public/report.html
+++ b/public/report.html
@@ -60,7 +60,7 @@
 <div class="container">
   <header class="header">
     <div class="header-title">
-      <h1>분석 리포트</h1>
+      <h1>CASP 분석 리포트</h1>
       <div class="header-badges">
         <span class="badge" id="qualityBadge">품질: 로딩 중...</span>
         <span class="badge" id="baselineBadge">Baseline: 확인 중...</span>
