--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,13 @@
     <div class="progress-container"><div class="progress-bar" id="progressBar"></div></div>
 
     <section id="step1" class="step active">
-        <h2 class="title">프로젝트-RHYTHME</h2>
+        <h2 class="title">CASP Test v1.1</h2>
         <div class="research-intro">
-            <p>본 연구는 <strong>(주)소울스펙트럼(SoulSpectrum Inc.)</strong>에서 주관하며, 
-            음성 특징과 SQ(Systemizing Quotient)의 상관관계를 분석하여 신경다양성 특성을 정밀 프로파일링하는 것을 목적으로 합니다.</p>
+            <p>
+  본 연구는 <strong>(주)소울스펙트럼(SoulSpectrum Inc.)</strong>에서 주관하며,
+  40초 발화를 10~15초 단위로 분절해 프로소디 특징과 SQ를 결합한 <strong>분포 기반 정규화 모델</strong>을 구축합니다.
+  모든 데이터는 <strong>익명 세션 ID</strong>로 처리됩니다.
+</p>
             <p class="pi-info">연구책임자: 맹난영</p>
         </div>
         <div class="button-group" style="margin-top: 40px;">
