--- a/public/voice_info.html
+++ b/public/voice_info.html
@@ -95,7 +95,7 @@
 <body>
   <div class="container" id="pageRoot">
     <div class="reward-hero">
-      <div class="reward-badge">🎁 완료 리워드</div>
+      <div class="reward-badge"> 완료 리워드</div>
       <div class="reward-title">개인 리포트(요약) 제공</div>
       <div class="reward-sub">
         음성의 내용은 저장하지 않고, <b>음성 특징(리듬/속도/휴지/억양)</b>만 분석해 리포트로 제공합니다.
@@ -112,7 +112,7 @@
     </div>
 
     <div class="info-section">
-      <h2>🎙️ 마이크 거리 안내 (진짜 중요)</h2>
+      <h2>✅ 마이크 거리 안내 (진짜 중요)</h2>
       <div class="chips">
         <span class="chip">권장 거리: <b>15~25cm</b></span>
         <span class="chip">한 손 뻗은 정도</span>
@@ -146,24 +146,14 @@
         업로드하지 않아도 진행됩니다.
       </p>
 
-      <div class="qeeg-card">
-        <div class="qeeg-title">우리가 qEEG에서 뽑는 것(예시)</div>
-        <ul style="opacity:.9; line-height:1.7; margin:0;">
-          <li><b>대역 파워</b>: Delta/Theta/Alpha/Beta 등 밴드별 세기(눈뜸/눈감음 비교 포함)</li>
-          <li><b>비율/균형</b>: 상대파워, 좌우 비대칭 같은 “패턴” 지표</li>
-          <li><b>연결/동조(가능 시)</b>: 채널 간 동조/네트워크 특징(연구용)</li>
-        </ul>
-      </div>
-
-      <div class="qeeg-card">
-        <div class="qeeg-title">qEEG를 ‘어떻게’ 결합해서 쓰나</div>
-        <ul style="opacity:.9; line-height:1.7; margin:0;">
-          <li><b>음성-뇌파 관계</b>: 음성 리듬/휴지/억양 변동과 qEEG 패턴의 상관/동반 변화 탐색</li>
-          <li><b>신뢰도 보정</b>: 설문↔음성 간 차이가 큰 경우, qEEG가 함께 있을 때 “상황 요인” vs “안정 특징” 구분 힌트</li>
-          <li><b>그룹 비교</b>: 연령대/집단별 평균 패턴 대비 개인이 어느 쪽에 가까운지(연구 분석)</li>
-        </ul>
-      </div>
-
+    <div class="qeeg-card">
+  <div class="qeeg-title">qEEG에서 산출하는 지표(현재 기준)</div>
+  <ul style="opacity:.9; line-height:1.7; margin:0;">
+    <li><b>밴드 파워(가능한 범위)</b>: Delta/Theta/Alpha/Beta 등 밴드별 파워 요약</li>
+    <li><b>채널/ROI 매핑</b>: 10-20 채널을 영역(ROI)으로 정규화해 비교 가능하도록 정리</li>
+    <li><b>품질/메타</b>: 업로드·세션 단위 메타데이터 및 분석 가능한 상태로 전처리</li>
+  </ul>
+</div>
       <p class="mini">
         ※ qEEG는 의료 진단이 아니라 연구/분석 목적이며,
         개인을 특정할 수 있는 정보(이름/연락처 등)는 저장하지 않고 <b>세션 ID</b> 기준으로만 연결합니다.
@@ -187,7 +177,7 @@
     <div class="pi-info" style="border-top: 1px solid #333; padding-top: 18px; margin-top: 18px;">
       <div style="background: rgba(187, 134, 252, 0.1); border-radius: 8px; padding: 14px; border: 1px dashed #BB86FC;">
         <p style="color: #BB86FC; font-size: 14px; font-weight: 900; margin: 0; line-height: 1.6; word-break: keep-all;">
-          ⚠️ 녹음 시작 버튼 클릭 시 '마이크 사용 권한' 허용 창이 뜨면 반드시 [허용]을 눌러주셔야 테스트가 가능합니다.
+          ✅ 녹음 시작 버튼 클릭 시 '마이크 사용 권한' 허용 창이 뜨면 반드시 [허용]을 눌러주셔야 테스트가 가능합니다.
         </p>
       </div>
     </div>
