--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> SQ와 프로소디 간 상관관계 연구 | SoulSpectrum</title>
+    <title>CASP Protocol</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -11,7 +11,7 @@
     <div class="progress-container"><div class="progress-bar" id="progressBar"></div></div>
 
     <section id="step1" class="step active">
-        <h2 class="title">CASP Test v1.1</h2>
+        <h2 class="title">CASP v1.1</h2>
         <div class="research-intro">
             <p>
   본 연구는 <strong>(주)소울스펙트럼(SoulSpectrum Inc.)</strong>에서 주관하며,
