그래 프로토콜

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <div class="progress-container"><div class="progress-bar" id="progressBar"></div></div>
 
     <section id="step1" class="step active">
-        <h2 class="title">CASP v1.1</h2>
+        <h2 class="title">CASP Protocol v1.1</h2>
         <div class="research-intro">
             <p>
   본 연구는 <strong>(주)소울스펙트럼(SoulSpectrum Inc.)</strong>에서 주관하며,
