--- a/public/index.html
+++ b/public/index.html
@@ -11,23 +11,26 @@
     <div class="progress-container"><div class="progress-bar" id="progressBar"></div></div>
 
 <section id="step1" class="step active">
-    <div class="header-group">
-        <h2 class="title">CASP Protocol <span class="version">v1.1</span></h2>
-        <p class="full-name">Cognitive–Adaptive Stress Prosody Test</p>
-        <p class="korean-name">인지-적응형 스트레스 프로소디 테스트</p>
+    <div class="header-highlight-box">
+        <h2 class="protocol-title">CASP Protocol</h2>
+        <p class="en-name">Cognitive–Adaptive Stress Prosody Test</p>
+        <p class="ko-name">인지-적응형 스트레스 프로소디 테스트</p>
     </div>
     
-    <div class="research-summary-card">
-        <div class="org-tag">(주)소울스펙트럼 | SoulSpectrum Inc.</div>
-        
-        <ul class="protocol-specs">
+    <div class="version-dimmed">v1.1</div>
+
+    <div class="research-container">
+        <ul class="spec-list">
             <li><strong>연구 방식:</strong> 40초 발화 데이터 수집 (10~15초 분절 분석)</li>
             <li><strong>핵심 모델:</strong> 프로소디 특징 × SQ 결합 분포 기반 정규화</li>
             <li><strong>데이터 보호:</strong> 모든 데이터는 익명 세션 ID로 암호화 처리</li>
         </ul>
 
-        <div class="pi-footer">
-            <span>연구책임자: 맹난영</span>
+        <hr class="divider">
+
+        <div class="info-footer">
+            <p class="company-name">(주)소울스펙트럼 | SoulSpectrum Inc.</p>
+            <p class="pi-name">연구 및 개인정보 책임자: 맹난영</p>
         </div>
     </div>
         <div class="button-group" style="margin-top: 40px;">
