--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,21 @@
 <div class="container">
     <div class="progress-container"><div class="progress-bar" id="progressBar"></div></div>
 
+사용자님의 직관적인 UI 감각을 반영하여, 유치하지 않으면서도 **전문적인 연구 프로토콜(Protocol)**의 느낌을 주는 디자인으로 최종 리팩토링했습니다. 보라색 배경의 중앙 정렬 박스는 시선을 집중시키고, 텍스트 간격을 좁혀 학술적 가독성을 높였습니다.
+
+1. CASP Protocol v1.1 최종 UI 리팩토링
+요청하신 대로 테두리 없는 보라색 중앙 정렬 박스와 줄어든 텍스트 간격을 적용했습니다.
+
+HTML 구조
+HTML
+
 <section id="step1" class="step active">
-    <div class="header-highlight-box">
+    <div class="header-purple-box">
         <h2 class="protocol-title">CASP Protocol</h2>
-        <p class="en-name">Cognitive–Adaptive Stress Prosody Test</p>
-        <p class="ko-name">인지-적응형 스트레스 프로소디 테스트</p>
+        <div class="name-group">
+            <p class="en-name">Cognitive–Adaptive Stress Prosody Test</p>
+            <p class="ko-name">인지-적응형 스트레스 프로소디 테스트</p>
+        </div>
     </div>
     
     <div class="version-dimmed">v1.1</div>
