제미나이가 비판을 받겠다며 정말 이번엔 uiux 경력자의 디자인으로 바꿨다고 했다.

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,6 @@
 <div class="container">
     <div class="progress-container"><div class="progress-bar" id="progressBar"></div></div>
 
-
 <section id="step1" class="step active">
     <div class="header-purple-box">
         <h2 class="protocol-title">CASP Protocol</h2>
@@ -22,14 +21,14 @@
     
     <div class="version-dimmed">v1.1</div>
 
-    <div class="research-container">
+    <div class="research-info-card">
         <ul class="spec-list">
             <li><strong>연구 방식:</strong> 40초 발화 데이터 수집 (10~15초 분절 분석)</li>
             <li><strong>핵심 모델:</strong> 프로소디 특징 × SQ 결합 분포 기반 정규화</li>
             <li><strong>데이터 보호:</strong> 모든 데이터는 익명 세션 ID로 암호화 처리</li>
         </ul>
 
-        <hr class="divider">
+        <hr class="card-divider">
 
         <div class="info-footer">
             <p class="company-name">(주)소울스펙트럼 | SoulSpectrum Inc.</p>
