명칭 변경 파라링귀스틱

--- a/public/done.html
+++ b/public/done.html
@@ -135,7 +135,7 @@
 
         <div class="info-card">
             <span class="notice-badge">BETA 참여 감사 이벤트</span>
-            <p>신경다양성인(ADHD, ASD 등)의 고유한 음성 리듬을 연구하는 본 프로젝트에 소중한 데이터를 보태주셨습니다.</p>
+            <p>고유한 음성 리듬을 연구하는 본 프로젝트에 소중한 데이터를 보태주셨습니다.</p>
             <p>제공해주신 데이터는 <strong>음성XSQ 모델</strong>의 가설 검증을 위해 소중히 사용됩니다.</p>
             
             <div class="medical-disclaimer">
