--- a/public/index.html
+++ b/public/index.html
@@ -15,15 +15,15 @@
         <h1 class="protocol-main-title">CASP Protocol</h1>
         <div class="version-dimmed-sub">v1.1</div>
         <div class="name-sub-group-tight">
-            <p class="en-sub-text">Cognitive–Adaptive Stress Prosody Test</p>
-            <p class="ko-sub-text">인지-적응형 스트레스 프로소디 테스트</p>
+            <p class="en-sub-text">Cognitive–Adaptive Stress Paralinguistic Protocol</p>
+            <p class="ko-sub-text">인지-적응형 스트레스 발화 테스트</p>
         </div>
     </div>
 
     <div class="research-info-card-minimal">
         <ul class="spec-list-tight">
             <li><strong>연구 방식:</strong> 40초 발화 데이터 수집 (10~15초 분절 분석)</li>
-            <li><strong>핵심 모델:</strong> 프로소디 특징 × SQ 결합 분포 기반 정규화</li>
+            <li><strong>핵심 모델:</strong> 파라링귀스틱 특징 × SQ 결합 분포 기반 정규화</li>
             <li><strong>데이터 보호:</strong> 모든 데이터는 익명 세션 ID로 암호화 처리</li>
         </ul>
 
