--- a/public/report_v2.html
+++ b/public/report_v2.html
@@ -97,7 +97,7 @@
             결과에 대해 궁금한 점이 있으신가요? 설문을 통해 더 자세한 리포트를 받아보세요.
         </p>
     </section>
+<script src="report_v2.js?v=20260119-1"></script>
 
-    <script src="report_v2.js"></script>
 </body>
 </html>
