--- a/public/report_v2.html
+++ b/public/report_v2.html
@@ -14,6 +14,7 @@
             <span id="baselineBadge" class="badge">Baseline 확인 중...</span>
         </div>
         <h1 id="personaTitle">데이터를 불러오는 중...</h1>
+        <p id="personaSubtitle" class="muted"></p>
         <p id="personaSummary">분석이 완료되면 여기에 핵심 요약이 표시됩니다.</p>
         <ul id="strengthList">
             </ul>
