css 업데이트 안되면 report html 과 style css 원복

--- a/public/report.html
+++ b/public/report.html
@@ -157,6 +157,7 @@ td {
 }
 </style>
 </body>
+  <div class="container">
     <section class="card" id="profile-section">
         <div class="badge-group">
             <span id="qualityBadge" class="badge">품질 분석 중...</span>
@@ -248,6 +249,6 @@ td {
         </p>
     </section>
 <script src="report.js?v=20260119-2"></script>
-
+</div>
 </body>
 </html>
