버튼 위계 변형

--- a/public/index.html
+++ b/public/index.html
@@ -186,7 +186,7 @@
             <span id="ecStatus" class="qeeg-status">미첨부</span>
         </div>
         <input type="file" id="qeegEC" style="display:none" onchange="updateFileName('EC')">
-        <button class="next-btn file-btn" onclick="document.getElementById('qeegEC').click()">파일 선택</button>
+        <button class="file-btn btn-secondary" onclick="document.getElementById('qeegEC').click()">파일 선택</button>
     </div>
 
     <div style="height: 24px;"></div> <div class="upload-unit">
@@ -198,7 +198,7 @@
             <span id="eoStatus" class="qeeg-status">미첨부</span>
         </div>
         <input type="file" id="qeegEO" style="display:none" onchange="updateFileName('EO')">
-        <button class="next-btn file-btn" onclick="document.getElementById('qeegEO').click()">파일 선택</button>
+        <button class="file-btn btn-secondary" onclick="document.getElementById('qeegEO').click()">파일 선택</button>
     </div>
 
 <button type="button" id="uploadBtn" class="next-btn" onclick="submitAll(event)">다음</button>
