--- a/public/report_v2.html
+++ b/public/report_v2.html
@@ -157,6 +157,21 @@ td {
 }
 </style>
 </body>
+<div class="sid-row">
+  <span class="sid-label">Session</span>
+  <span id="sidText" class="sid-text">-</span>
+
+  <button id="copySidBtn" type="button" class="btn btn-sm">
+    세션 ID 복사
+  </button>
+
+  <!-- 있으면 같이 -->
+  <button id="copyReportLinkBtn" type="button" class="btn btn-sm">
+    리포트 링크 복사
+  </button>
+</div>
+
+
     <section class="card" id="profile-section">
         <div class="badge-group">
             <span id="qualityBadge" class="badge">품질 분석 중...</span>
