--- a/public/report.html
+++ b/public/report.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>리듬 분석 리포트 V2</title>
+    <title>CASP Protocol V2</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -157,7 +157,9 @@ td {
 }
 </style>
 </body>
-  <div class="container">
+  
+
+<div class="container">
     <section class="card" id="profile-section">
         <div class="badge-group">
             <span id="qualityBadge" class="badge">품질 분석 중...</span>
