--- a/public/voice_test.html
+++ b/public/voice_test.html
@@ -29,6 +29,68 @@ function apiUrl(path) {
   return new URL(clean, base).toString();
 }
 
+function showErrorModal(title, message, detail) {
+  // detail은 개발용(짧게). URL/민감정보는 넣지 말 것.
+  const id = "rhythmeErrorModal";
+  let modal = document.getElementById(id);
+
+  if (!modal) {
+    modal = document.createElement("div");
+    modal.id = id;
+    modal.style.cssText = `
+      position:fixed; inset:0; z-index:999999;
+      background:rgba(0,0,0,.55);
+      display:flex; align-items:center; justify-content:center;
+      padding:18px;
+    `;
+    modal.innerHTML = `
+      <div style="
+        width:min(520px, 92vw);
+        background:#111827; color:#fff;
+        border:1px solid rgba(255,255,255,.12);
+        border-radius:16px; padding:16px;
+        box-shadow:0 18px 60px rgba(0,0,0,.45);
+        font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial;
+      ">
+        <div style="font-weight:800; font-size:16px; margin-bottom:8px;" id="rhErrTitle"></div>
+        <div style="font-size:14px; line-height:1.4; opacity:.95;" id="rhErrMsg"></div>
+        <pre style="
+          margin-top:10px; padding:10px;
+          background:rgba(255,255,255,.06);
+          border-radius:12px; overflow:auto;
+          font-size:12px; opacity:.9; display:none;
+        " id="rhErrDetail"></pre>
+        <div style="display:flex; justify-content:flex-end; margin-top:12px;">
+          <button id="rhErrClose" style="
+            padding:10px 14px; border-radius:12px;
+            border:1px solid rgba(255,255,255,.16);
+            background:transparent; color:#fff; font-weight:700;
+            cursor:pointer;
+          ">확인</button>
+        </div>
+      </div>
+    `;
+    modal.addEventListener("click", (e) => {
+      if (e.target === modal) modal.remove();
+    });
+    document.body.appendChild(modal);
+    modal.querySelector("#rhErrClose").onclick = () => modal.remove();
+  }
+
+  modal.querySelector("#rhErrTitle").textContent = title || "오류";
+  modal.querySelector("#rhErrMsg").textContent = message || "오류가 발생했습니다.";
+
+  const d = modal.querySelector("#rhErrDetail");
+  if (detail) {
+    d.style.display = "block";
+    d.textContent = detail;
+  } else {
+    d.style.display = "none";
+    d.textContent = "";
+  }
+}
+
+
 // ✅ 자동 로그 수집(사용자 액션 0)
 async function logClientError(err, context = {}) {
   const sid =
