서버통신 오류

--- a/public/voice_test.html
+++ b/public/voice_test.html
@@ -486,11 +486,33 @@ const s4 = isUnder14
           stageIdx,
           sid,
         });
-        alert("오류가 발생했습니다. 카톡에서 다시 시도해 주세요.");
-        return;
+        const hint =
+  res.status === 401 || res.status === 403 ? "권한/키 설정 문제일 수 있어요." :
+  res.status === 404 ? "API 주소가 잘못됐거나 배포된 서버가 응답하지 않아요." :
+  res.status >= 500 ? "서버 오류가 발생했어요. 잠시 후 다시 시도해 주세요." :
+  "네트워크/요청 오류가 발생했어요.";
+
+showErrorModal(
+  "서버 전송에 실패했어요",
+  `녹음 데이터 전송이 실패했습니다. (${res.status}) ${hint}`,
+  (txt || "").slice(0, 200) // ✅ URL은 넣지 말고, 응답만 짧게
+);
+return;
+
       }
-    } catch (e) {
+} catch (e) {
   const name = e?.name || "Error";
+  const msgText = String(e?.message || "");
+
+  // ✅ fetch/네트워크 계열 에러 먼저 잡기 (폰에서 가장 흔함)
+  if (name === "TypeError" || /failed to fetch|network|fetch/i.test(msgText)) {
+    showErrorModal(
+      "서버 통신에 실패했어요",
+      "서버가 내려갔거나(API), 주소/CORS 문제일 수 있어요. 잠시 후 다시 시도해 주세요.",
+      `${name}: ${msgText}`.slice(0, 200)
+    );
+    return;
+  }
   const msg =
     name === "NotAllowedError" ? "마이크 권한이 거부되었습니다. 브라우저 설정에서 마이크를 허용해 주세요." :
     name === "NotFoundError"   ? "마이크 장치를 찾지 못했습니다. 이어폰/블루투스/외부 마이크 연결을 확인해 주세요." :
