메타태그 넣음

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CASP Protocol</title>
+    <!-- 기본 -->
+<title>CASP Protocol | 나의 음성 체계화 지수</title>
+<meta name="description" content="여기를 눌러 테스트 해보세요." />
+
+<!-- Open Graph (카톡/스레드/페북) -->
+<meta property="og:type" content="website" />
+<meta property="og:title" content="CASP Protocol | 나의 음성 체계화 지수" />
+<meta property="og:description" content="여기를 눌러 테스트 해보세요." />
+<meta property="og:url" content="https://rhythme-lozee.netlify.app/casp.html" />
+<meta property="og:image" content="https://rhythme-lozee.netlify.app/og/casp.png" />
+
+<!-- Twitter (겸사겸사) -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="CASP Protocol | 나의 음성 체계화 지수" />
+<meta name="twitter:description" content="여기를 눌러 테스트 해보세요." />
+<meta name="twitter:image" content="https://rhythme-lozee.netlify.app/og/casp.png" />
+
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
